// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshots > matches snapshot with additional classes 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        aria-label="progressbar"
        aria-valuenow="90"
        data-testid="udp-progress-bar"
        id="_r_1_"
        role="progressbar"
      >
        <div
          class="w-full overflow-hidden rounded-full bg-gray-200 dark:bg-gray-700 h-2.5 min-w-96"
        >
          <div
            class="space-x-2 rounded-full text-center font-medium leading-none text-primary-300 dark:text-primary-100 bg-primary-700 h-2.5"
            style="width: 90%;"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-label="progressbar"
      aria-valuenow="90"
      data-testid="udp-progress-bar"
      id="_r_1_"
      role="progressbar"
    >
      <div
        class="w-full overflow-hidden rounded-full bg-gray-200 dark:bg-gray-700 h-2.5 min-w-96"
      >
        <div
          class="space-x-2 rounded-full text-center font-medium leading-none text-primary-300 dark:text-primary-100 bg-primary-700 h-2.5"
          style="width: 90%;"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`snapshots > matches snapshot with default values 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        aria-label="progressbar"
        aria-valuenow="45"
        data-testid="udp-progress-bar"
        id="_r_0_"
        role="progressbar"
      >
        <div
          class="w-full overflow-hidden rounded-full bg-gray-200 dark:bg-gray-700 h-2.5 min-w-20"
        >
          <div
            class="space-x-2 rounded-full text-center font-medium leading-none text-primary-300 dark:text-primary-100 bg-primary-700 h-2.5"
            style="width: 45%;"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-label="progressbar"
      aria-valuenow="45"
      data-testid="udp-progress-bar"
      id="_r_0_"
      role="progressbar"
    >
      <div
        class="w-full overflow-hidden rounded-full bg-gray-200 dark:bg-gray-700 h-2.5 min-w-20"
      >
        <div
          class="space-x-2 rounded-full text-center font-medium leading-none text-primary-300 dark:text-primary-100 bg-primary-700 h-2.5"
          style="width: 45%;"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
